css/ioi-oleochemical.webflow.css
/* ... */
.filters5_results-wrapper {
  justify-content: center;
  display: flex;
}

.filters5_results-text {
  font-size: .875rem;
}

.feed-content-replace-this-div {
  border: 2px dashed #00000026;
  width: 100%;
  min-height: 200vh;
}

.filters5_empty {
  border: var(--_ui-styles---stroke--border-width) solid var(--color-scheme-1--border);
  background-color: transparent;
  text-align: center;
  padding: 2.9rem;
  width: 100%;
  box-sizing: border-box;
}

.dropdown-toggle {
  padding: 0;
}

.select1_component {
  align-items: center;
  display: flex;
  position: relative;
}

.stats55_number_smaller {
  color: var(--color-scheme-1--accent);
  font-size: 3rem;
  font-weight: 700;
  line-height: 1.3;
}

.navbar5_thumbnail {
  aspect-ratio: 3 / 2;
  border-radius: var(--_ui-styles---radius--small);
  object-fit: cover;
  height: 5rem;
  overflow: hidden;
}

.is-hidden {
  display: none;
}

._404_logo {
  object-fit: contain;
  height: 4rem;
}

.is-decorated {
  background-image: url('../images/mnemonic-1.svg');
  background-position: -600px -600px;
  background-repeat: no-repeat;
  background-size: auto;
}

.career4_job-department-wrapper {
  grid-column-gap: .5rem;
  grid-row-gap: .5rem;
  justify-content: flex-start;
  align-items: center;
  margin-top: .25rem;
  margin-bottom: .25rem;
  display: flex;
}

.navbar14_dropdown-toggle {
  grid-column-gap: .5rem;
  align-items: center;
  padding: .5rem 1rem;
  display: flex;
}

.navbar14_dropdown-list.w--open {
  border: var(--_ui-styles---stroke--border-width) solid var(--color-scheme-1--border);
  border-radius: var(--_ui-styles---radius--small);
  background-color: var(--color-scheme-1--background);
  padding: .5rem;
  position: absolute;
}

.navbar14_dropdown-link {
  padding: .5rem 1rem;
}

.navbar14_dropdown-link.w--current {
  color: var(--_primitives---colors--neutral-darkest);
}

.text-size-small-4 {
  font-size: 1rem;
}

.image {
  max-height: 7rem;
}

.gallery1_image-wrapper {
  border-radius: var(--_ui-styles---radius--large);
  width: 100%;
  overflow: hidden;
}

.text-size-medium-2 {
  font-size: 1.125rem;
}

.gallery1_grid-list {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr;
  width: 100%;
}

.gallery1_lightbox-link {
  width: 100%;
  height: 100%;
}

.gallery1_component {
  flex-flow: column;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.section_gallery1 {
  background-color: var(--color-scheme-1--background);
  color: var(--color-scheme-1--text);
}

.gallery1_image {
  aspect-ratio: auto;
  cursor: default;
  object-fit: contain;
  width: 100%;
  height: 100%;
}

.heading-style-h2-2 {
  font-size: 3rem;
  font-weight: 700;
  line-height: 1.2;
}

.job_toggle {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  color: var(--color-scheme-2--accent);
  cursor: pointer;
  flex-wrap: wrap;
  align-items: center;
  display: flex;
}

.job_toggle.is-right {
  justify-content: flex-end;
  align-items: center;
}

.job_toggle.is-center {
  justify-content: center;
}

.job_toggle.is-extra-gap {
  grid-column-gap: 2rem;
  grid-row-gap: 2rem;
}

.job_details {
  width: 100%;
  max-width: 48rem;
  overflow: hidden;
}

.text-block {
  grid-column-gap: .4rem;
  grid-row-gap: .4rem;
  justify-content: space-between;
  align-items: flex-start;
  display: flex;
}

.career4_job-department-name-wrapper {
  grid-column-gap: .75rem;
  grid-row-gap: .25rem;
  flex-flow: wrap;
  justify-content: flex-start;
  align-items: flex-start;
  margin-top: .25rem;
  margin-bottom: .25rem;
  display: flex;
}

.layout505_image {
  aspect-ratio: 3 / 2;
  border-radius: var(--_ui-styles---radius--small);
  object-fit: cover;
  width: 100%;
}

.layout505_image._4 {
  object-position: 50% 60%;
}

.layout505_image._6 {
  object-position: 50% 57%;
}

.layout505_image._1 {
  object-position: 50% 68%;
}

.section-header2_component {
  grid-template-rows: auto auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
}

.section-header2_content-wrapper {
  grid-column-gap: 1.5rem;
  grid-row-gap: 1.5rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr max-content;
  grid-auto-columns: 1fr;
  align-items: end;
  display: grid;
}

.section-header2_content-right {
  align-items: center;
  display: flex;
}

.section-header2_form-block {
  margin-bottom: 0;
  margin-right: 1rem;
}

.section-header2_search {
  align-items: center;
  display: flex;
  position: relative;
}

.dropdown2_dropdown-link {
  padding: .5rem;
}

.dropdown2_dropdown-link.w--current {
  color: var(--_primitives---colors--neutral-darkest);
}

.stacked-list1_list {
  border-top: 1px solid var(--color-scheme-1--border);
}

.stacked-list1_item {
  grid-column-gap: 1.5rem;
  grid-row-gap: 1.5rem;
  border-bottom: 1px solid var(--color-scheme-1--border);
  grid-template-rows: auto;
  grid-template-columns: 1fr max-content;
  grid-auto-columns: 1fr;
  justify-content: space-between;
  align-items: flex-start;
  padding-top: 1rem;
  padding-bottom: 1rem;
  display: flex;
  position: relative;
}

.stacked-list1_avatar {
  grid-column-gap: .75rem;
  grid-row-gap: .75rem;
  grid-template-rows: auto;
  grid-template-columns: max-content 1fr;
  grid-auto-columns: 1fr;
  align-items: center;
  display: flex;
}

.stacked-list1_avatar-image {
  object-fit: cover;
  border-radius: 100%;
  width: 3rem;
  height: 3rem;
}

.stacked-list1_content-right {
  grid-column-gap: 1rem;
  grid-row-gap: 1rem;
  align-items: center;
  display: flex;
}

.header142_images-group2 {
  opacity: .1;
  filter: blur(1px);
  transform-origin: 50% 100%;
  justify-content: center;
  align-items: center;
  display: flex;
  position: absolute;
  inset: 0%;
}

.header142_image-wrapper3 {
  z-index: 1;
  border-radius: var(--_ui-styles---radius--medium);
  width: 100%;
  max-width: 27%;
  position: absolute;
  bottom: 32%;
  left: 17%;
  overflow: hidden;
}
/* ... */

